--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
     <script src='bower_components/angular-strap/dist/angular-strap.tpl.min.js'></script>
     <script src="bower_components/tv4/tv4.js"></script>
     <script src="bower_components/objectpath/lib/ObjectPath.js"></script>
-    <script src="bower_components/angular-schema-form/dist/schema-form.min.js"></script>
+    <script src="bower_components/angular-schema-form/dist/schema-form.js"></script>
     <script src="bower_components/angular-schema-form/dist/bootstrap-decorator.min.js"></script>
     <script src="schema-form-date-time-picker.js"></script>
     <script src="date.js"></script>
@@ -27,6 +27,6 @@
     </style>
   </head>
   <body ng-controller='DateTimeController'>
-    <form sf-schema="schema" sf-form="form" sf-model="model"></form>
+    <form name="myForm" sf-schema="schema" sf-form="form" sf-model="model" ng-submit="onSubmit(myForm)"></form>
   </body>
 </html>
