--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -1,7 +1,7 @@
 <div class="form-group" ng-class="{'has-error': hasError() }">
   <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
   <div class="row">
-    <div class="col-xs-5 col-sm-2 col-md-2">
+    <div class="form-control-time">
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
         <input type="text" class="form-control" size="8"
