--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-class="{'has-error': hasError() }">
+<div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
   <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
   <div class="row">
     <div class="form-control-date">
@@ -16,7 +16,12 @@
           data-use-navitve="{{form.dateOptions.useNative || false}}"
           bs-datepicker />
       </div>
+      <span ng-if="form.feedback !== false"
+        class="form-control-feedback"
+        ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
     </div>
   </div>
-  <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  <div class="help-block"
+    ng-show="(hasError() && errorMessage(schemaError())) || form.description"
+    ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
 </div>
