--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -1,4 +1,4 @@
-<div class="form-group" ng-class="{'has-error': hasError() }">
+<div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
   <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
   <div class="row">
     <div class="form-control-time">
@@ -10,12 +10,16 @@
           schema-validate="form"
           data-time-type="{{form.timeOptions.timeType || 'string'}}"
           data-time-format="{{form.timeOptions.timeFormat || 'shortTime'}}"
-          data-autoclose="{{form.timeOptions.autoclose || '1'}}"
           data-minute-step="{{form.timeOptions.minuteStep || '15'}}"
           data-use-native="{{form.timeOptions.useNative || false}}"
           bs-timepicker />
       </div>
+      <span ng-if="form.feedback !== false"
+        class="form-control-feedback"
+        ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
     </div>
   </div>
-  <span class="help-block">{{ (hasError() && errorMessage(schemaError())) || form.description}}</span>
+  <div class="help-block"
+    ng-show="(hasError() && errorMessage(schemaError())) || form.description"
+    ng-bind-html="(hasError() && errorMessage(schemaError())) || form.description"></div>
 </div>
