--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -8,10 +8,12 @@
           ng-show="form.key"
           ng-model="$$value$$"
           schema-validate="form"
-          data-time-type="{{form.timeOptions.timeType || 'string'}}"
-          data-time-format="{{form.timeOptions.timeFormat || 'shortTime'}}"
           data-minute-step="{{form.timeOptions.minuteStep || '15'}}"
           data-use-native="{{form.timeOptions.useNative || false}}"
+          data-min-time="10:00"
+          data-max-time="16:30"
+          data-time-format="HH:mm"
+          data-time-type="number"
           bs-timepicker />
       </div>
       <span ng-if="form.feedback !== false"
