--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -13,7 +13,7 @@
                data-max-time="16:30"
                data-time-format="HH:mm"
                data-time-type="string"
-               data-round-display=true,
+               data-round-display="true",
                bs-timepicker />
       </div>
       <span ng-if="form.feedback !== false"
