--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -1,10 +1,10 @@
-<div class="form-group" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
-  <label class="control-label" ng-show="showTitle()">{{form.title}}</label>
+<div class="form-group schema-form-datetimepicker {{form.htmlClass}}" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
+  <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
   <div class="row">
     <div class="form-control-date">
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-        <input type="text" class="form-control" 
+        <input type="text" class="form-control {{form.fieldHtmlClass}}" 
           ng-show="form.key"
           ng-model="$$value$$"
           data-date-type="{{form.options.dateType || 'object'}}"
@@ -19,7 +19,7 @@
     <div class="form-control-time">
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
-        <input type="text" class="form-control" size="8"
+        <input type="text" class="form-control {{form.fieldHtmlClass}}" size="8"
           ng-show="form.key"
           ng-model="$$value$$"
           data-time-type="{{form.options.timeType || 'object'}}"
