Fix spelling of angular-strap useNative flag

--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -13,7 +13,7 @@
           data-autoclose="{{form.dateOptions.autoclose}}"
           data-min-date="{{form.dateOptions.minDate}}"
           data-max-date="{{form.dateOptions.maxDate}}"
-          data-use-navitve="{{form.dateOptions.useNative || false}}"
+          data-use-native="{{form.dateOptions.useNative || false}}"
           bs-datepicker />
       </div>
       <span ng-if="form.feedback !== false"
