--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -12,7 +12,7 @@
           data-autoclose="{{form.options.autoclose || '1'}}"
           data-min-date="{{form.options.minDate}}"
           data-max-date="{{form.options.maxDate}}"
-          data-use-navitve="{{form.options.useNative || false}}"
+          data-use-native="{{form.options.useNative || false}}"
           bs-datepicker />
       </div>
     </div>
