--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -7,6 +7,7 @@
         <input type="text" class="form-control {{form.fieldHtmlClass}}" 
           ng-show="form.key"
           ng-model="$$value$$"
+          ng-model-options="form.ngModelOptions"
           schema-validate="form"
           data-date-type="{{form.dateOptions.dateType || 'string'}}"
           data-date-format="{{form.dateOptions.dateFormat || 'dd/MM/yyyy'}}"
