--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -5,6 +5,7 @@
         <input type="text" class="form-control {{form.fieldHtmlClass}}" size="8"
                ng-show="form.key"
                ng-model="$$value$$"
+               ng-model-options="form.ngModelOptions"
                schema-validate="form"
                data-use-native="{{form.timeOptions.useNative || false}}"
                data-min-time="10:00"
