Add sf-changed directive to form elements

--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -9,6 +9,7 @@
           ng-model="$$value$$"
           ng-model-options="form.ngModelOptions"
           schema-validate="form"
+          sf-changed="form"
           data-date-type="{{form.dateOptions.dateType || 'string'}}"
           data-date-format="{{form.dateOptions.dateFormat || 'dd/MM/yyyy'}}"
           data-autoclose="{{form.dateOptions.autoclose}}"
