--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -7,6 +7,7 @@
                ng-model="$$value$$"
                ng-model-options="form.ngModelOptions"
                schema-validate="form"
+               sf-changed="form"
                data-use-native="{{form.timeOptions.useNative || false}}"
                data-min-time="10:00"
                data-max-time="16:30"
