--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -8,6 +8,7 @@
           ng-show="form.key"
           ng-model="$$value$$"
           ng-model-options="form.ngModelOptions"
+          ng-disabled="form.readonly"
           schema-validate="form"
           sf-changed="form"
           data-date-type="{{form.dateOptions.dateType || 'string'}}"
