--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -8,6 +8,7 @@
           ng-show="form.key"
           ng-model="$$value$$"
           ng-model-options="form.ngModelOptions"
+          ng-disabled="form.readonly"
           data-date-type="{{form.options.dateType || 'object'}}"
           data-date-format="{{form.options.dateFormat || 'dd/MM/yyyy'}}"
           data-autoclose="{{form.options.autoclose || '1'}}"
@@ -24,6 +25,7 @@
           ng-show="form.key"
           ng-model="$$value$$"
           ng-model-options="form.ngModelOptions"
+          ng-disabled="form.readonly"
           data-time-type="{{form.options.timeType || 'object'}}"
           data-time-format="{{form.options.timeFormat || 'shortTime'}}"
           data-minute-step="{{form.options.minuteStep || '15'}}"
