--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -6,6 +6,7 @@
                ng-show="form.key"
                ng-model="$$value$$"
                ng-model-options="form.ngModelOptions"
+               ng-disabled="form.readonly"
                schema-validate="form"
                sf-changed="form"
                data-use-native="{{form.timeOptions.useNative || false}}"
@@ -16,7 +17,6 @@
                data-minute-step="15"
                data-round-display="true"
                bs-timepicker />
-
       <span ng-if="form.feedback !== false"
         class="form-control-feedback"
         ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
