Make timepicker configurable

--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -10,12 +10,12 @@
                schema-validate="form"
                sf-changed="form"
                data-use-native="{{form.timeOptions.useNative || false}}"
-               data-min-time="10:00"
-               data-max-time="16:30"
-               data-time-format="HH:mm"
-               data-time-type="string"
-               data-minute-step="15"
-               data-round-display="true"
+               data-min-time="{{form.timeOptions.minTime || '00:00'}}"
+               data-max-time="{{form.timeOptions.maxTime || '23:59'}}"
+               data-time-format="{{form.timeOptions.timeFormat || 'HH:mm'}}"
+               data-time-type="{{form.timeOptions.timeType || 'string'}}"
+               data-minute-step="{{form.timeOptions.minuteStep || 15}}"
+               data-round-display="{{form.timeOptions.roundDisplay || true}}"
                bs-timepicker />
       <span ng-if="form.feedback !== false"
         class="form-control-feedback"
