--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -28,7 +28,10 @@
           ng-disabled="form.readonly"
           data-time-type="{{form.options.timeType || 'object'}}"
           data-time-format="{{form.options.timeFormat || 'shortTime'}}"
+          data-min-time="{{form.options.minTime || '00:00'}}"
+          data-max-time="{{form.options.maxTime || '23:59'}}"
           data-minute-step="{{form.options.minuteStep || '15'}}"
+          data-round-display="{{form.options.roundDisplay || true}}"
           data-use-native="{{form.options.useNative || false}}"
           bs-timepicker />
       </div>
