Sane default for minTime, maxTime on timepicker

--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -28,8 +28,8 @@
           ng-disabled="form.readonly"
           data-time-type="{{form.options.timeType || 'object'}}"
           data-time-format="{{form.options.timeFormat || 'shortTime'}}"
-          data-min-time="{{form.options.minTime || '00:00'}}"
-          data-max-time="{{form.options.maxTime || '23:59'}}"
+          data-min-time="{{form.options.minTime}}"
+          data-max-time="{{form.options.maxTime}}"
           data-minute-step="{{form.options.minuteStep || '15'}}"
           data-round-display="{{form.options.roundDisplay || true}}"
           data-use-native="{{form.options.useNative || false}}"
