--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -10,8 +10,8 @@
                schema-validate="form"
                sf-changed="form"
                data-use-native="{{form.timeOptions.useNative || false}}"
-               data-min-time="{{form.timeOptions.minTime || '00:00'}}"
-               data-max-time="{{form.timeOptions.maxTime || '23:59'}}"
+               data-min-time="{{form.timeOptions.minTime}}"
+               data-max-time="{{form.timeOptions.maxTime}}"
                data-time-format="{{form.timeOptions.timeFormat || 'HH:mm'}}"
                data-time-type="{{form.timeOptions.timeType || 'string'}}"
                data-minute-step="{{form.timeOptions.minuteStep || 15}}"
