--- a/src/timepicker.html
+++ b/src/timepicker.html
@@ -20,6 +20,12 @@
       <span ng-if="form.feedback !== false"
         class="form-control-feedback"
         ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"></span>
+  <span ng-if="form.feedback !== false"
+    class="form-control-feedback"
+    ng-class="evalInScope(form.feedback) || {'glyphicon': true, 'glyphicon-ok': hasSuccess(), 'glyphicon-remove': hasError() }"
+    aria-hidden="true"></span>
+  <span ng-if="hasError() || hasSuccess()"
+    class="sr-only">{{ hasSuccess() ? '(success)' : '(error)' }}</span>
     </div>
   <div class="help-block"
     ng-show="(hasError() && errorMessage(schemaError())) || form.description"
