Support has-feedback and has-success states in CSS

--- a/src/datetimepicker.html
+++ b/src/datetimepicker.html
@@ -1,4 +1,6 @@
-<div class="form-group schema-form-datetimepicker {{form.htmlClass}}" ng-class="{'has-error': hasError(), 'has-success': hasSuccess(), 'has-feedback': form.feedback !== false }">
+<div class="form-group schema-form-datetimepicker {{form.htmlClass}}"
+     ng-class="{'has-error': form.disableErrorState !== true && hasError(), 'has-success': form.disableSuccessState !== true && hasSuccess(), 'has-feedback': form.feedback !== false}">
+
   <label class="control-label {{form.labelHtmlClass}}" ng-show="showTitle()">{{form.title}}</label>
   <div class="row">
     <div class="form-control-date">
