--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -7,6 +7,7 @@
       <div class="input-group">
         <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
         <input type="text" class="form-control {{form.fieldHtmlClass}}"
+          name="{{form.key.slice(-1)[0]}}"
           ng-show="form.key"
           ng-model="$$value$$"
           ng-model-options="form.ngModelOptions"
