Start with Monday by default or look at startWeek
Consider the dateOptions.startWeek configuration and default to
start at Monday

--- a/src/datepicker.html
+++ b/src/datepicker.html
@@ -16,6 +16,7 @@
           sf-changed="form"
           data-date-type="{{form.dateOptions.dateType || 'string'}}"
           data-date-format="{{form.dateOptions.dateFormat || 'dd/MM/yyyy'}}"
+          data-start-week="{{form.dateOptions.startWeek || 1}}"
           data-autoclose="{{form.dateOptions.autoclose}}"
           data-min-date="{{form.dateOptions.minDate}}"
           data-max-date="{{form.dateOptions.maxDate}}"
