Propagate bs-(date|time)picker hasError() up
Ensure the ASF decorator scope has access to hasError() and
hasSuccess() functions to get status from the ngModel attached to
the date- and timepicker

--- a/src/datetimepickerdir.html
+++ b/src/datetimepickerdir.html
@@ -16,7 +16,8 @@
         data-min-date="{{form.options.minDate}}"
         data-max-date="{{form.options.maxDate}}"
         data-use-native="{{form.options.useNative || false}}"
-        bs-datepicker />
+        bs-datepicker
+        asf-dtp-status="Date">
     </div>
   </div>
   <div class="form-control-time">
@@ -36,7 +37,8 @@
         data-minute-step="{{form.options.minuteStep || '15'}}"
         data-round-display="{{form.options.roundDisplay || true}}"
         data-use-native="{{form.options.useNative || false}}"
-        bs-timepicker />
+        bs-timepicker
+        asf-dtp-status="Time">
     </div>
   </div>
 </div>
